--- a/44643Sec03Team02Spring2024FinalProject/RealVision/RealVision/Base.lproj/Main.storyboard
+++ b/44643Sec03Team02Spring2024FinalProject/RealVision/RealVision/Base.lproj/Main.storyboard
@@ -96,10 +96,10 @@
             </objects>
             <point key="canvasLocation" x="1465" y="882"/>
         </scene>
-        <!--View Controller-->
+        <!--Privacy PolicyVC-->
         <scene sceneID="xbv-AG-8tV">
             <objects>
-                <viewController id="Uo1-Ft-mfk" sceneMemberID="viewController">
+                <viewController id="Uo1-Ft-mfk" customClass="PrivacyPolicyVC" customModule="RealVision" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="sfx-Pg-6vk">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -110,7 +110,7 @@
                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="XSY-k9-d3P">
                                         <rect key="frame" x="0.0" y="0.0" width="353" height="802"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                        <mutableString key="text">Privacy Policy of RealVision
+                                        <string key="text">Privacy Policy of RealVision
 This Application collects some Personal Data from its Users.
 
 This document can be printed for reference by using the print command in the settings of any browser.
@@ -224,7 +224,7 @@ Should the changes affect processing activities performed on the basis of the Us
 Definitions and legal references
 Latest update: March 30, 2024
 
-iubenda hosts this content and only collects the Personal Data strictly necessary for it to be provided.</mutableString>
+iubenda hosts this content and only collects the Personal Data strictly necessary for it to be provided.</string>
                                         <color key="textColor" systemColor="labelColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -606,16 +606,16 @@ iubenda hosts this content and only collects the Personal Data strictly necessar
                                 <rect key="frame" x="20" y="40" width="353" height="782"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="RealVision" translatesAutoresizingMaskIntoConstraints="NO" id="INC-Iw-uzO" userLabel="RealVision">
-                                        <rect key="frame" x="0.0" y="0.0" width="353" height="172"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="353" height="445.33333333333331"/>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Reset Password" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KGV-Yi-MbA">
-                                        <rect key="frame" x="0.0" y="180" width="353" height="78.333333333333314"/>
+                                        <rect key="frame" x="0.0" y="453.33333333333331" width="353" height="77.999999999999943"/>
                                         <fontDescription key="fontDescription" style="UICTFontTextStyleTitle0"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="bd3-xJ-m8v" userLabel="emailSV">
-                                        <rect key="frame" x="0.0" y="266.33333333333331" width="353" height="78"/>
+                                        <rect key="frame" x="0.0" y="539.33333333333337" width="353" height="78.333333333333371"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter your Email" textAlignment="justified" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RSL-49-d6Z">
                                                 <rect key="frame" x="0.0" y="0.0" width="353" height="20.333333333333332"/>
@@ -624,7 +624,7 @@ iubenda hosts this content and only collects the Personal Data strictly necessar
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" placeholder="your email id" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="pNC-08-uLm">
-                                                <rect key="frame" x="0.0" y="28.333333333333368" width="353" height="49.666666666666657"/>
+                                                <rect key="frame" x="0.0" y="28.333333333333258" width="353" height="50"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
                                                 <connections>
@@ -634,10 +634,10 @@ iubenda hosts this content and only collects the Personal Data strictly necessar
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="dgT-is-c1p" userLabel="ButtonsSV">
-                                        <rect key="frame" x="0.0" y="352.33333333333326" width="353" height="429.66666666666674"/>
+                                        <rect key="frame" x="0.0" y="625.66666666666663" width="353" height="156.33333333333337"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="fill" contentVerticalAlignment="bottom" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qrc-ka-Ppq">
-                                                <rect key="frame" x="0.0" y="0.0" width="353" height="211"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="353" height="74"/>
                                                 <state key="normal" title="Button"/>
                                                 <buttonConfiguration key="configuration" style="plain" title="Reset"/>
                                                 <connections>
@@ -645,7 +645,7 @@ iubenda hosts this content and only collects the Personal Data strictly necessar
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="top" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Qd8-Hd-djy">
-                                                <rect key="frame" x="0.0" y="219.00000000000006" width="353" height="210.66666666666669"/>
+                                                <rect key="frame" x="0.0" y="82" width="353" height="74.333333333333314"/>
                                                 <state key="normal" title="Button"/>
                                                 <buttonConfiguration key="configuration" style="plain" title="Cancel"/>
                                                 <connections>
