--- a/44643Sec03Team02Spring2024FinalProject/RealVision/RealVision/Base.lproj/Main.storyboard
+++ b/44643Sec03Team02Spring2024FinalProject/RealVision/RealVision/Base.lproj/Main.storyboard
@@ -981,10 +981,8 @@ Please note that these terms and conditions are for illustrative purposes only a
                     <navigationItem key="navigationItem" id="ewd-2e-Jrh"/>
                     <connections>
                         <outlet property="Accuracy" destination="0Gz-bH-HhQ" id="BbX-gh-Jyb"/>
-                        <outlet property="Live" destination="uSX-ES-cOW" id="zD6-RP-eh1"/>
-                        <outlet property="Objectdescription" destination="uSX-ES-cOW" id="miK-D7-fQ4"/>
-                        <outlet property="accuracy" destination="0Gz-bH-HhQ" id="xRF-ZG-dLm"/>
-                        <outlet property="objectDescription" destination="uSX-ES-cOW" id="AfB-bt-CZe"/>
+                        <outlet property="Live" destination="tv9-Dx-P56" id="p6D-cs-QHR"/>
+                        <outlet property="Objectdescription" destination="uSX-ES-cOW" id="xgZ-tb-F9e"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="b6F-js-IeW" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
